external-crates/move/crates/move-compiler/tests/move_2024/naming/standalone_module_ident.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03002]: unbound module
  ┌─ tests/move_2024/naming/standalone_module_ident.move:4:9
  │
4 │     use 0x2::X;
  │         ^^^^^^ Invalid 'use'. Unbound module: '0x2::X'

error[E03005]: unbound unscoped name
  ┌─ tests/move_2024/naming/standalone_module_ident.move:6:17
  │
6 │         let x = X; x;
  │                 ^ Unbound constant 'X'

error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/naming/standalone_module_ident.move:7:17
  │
7 │         let x = 0x2::X; x;
  │                 ^^^^^^ Unexpected module identifier. A module identifier is not a valid expression

error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/naming/standalone_module_ident.move:8:17
  │
8 │         let y = 0x2::Y; y;
  │                 ^^^^^^ Unexpected module identifier. A module identifier is not a valid expression
